@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam CircledCharacterFontSize 0
skinparam CircledCharacterRadius 0

abstract class Command
class Inventory
class Item
class RemoveCommand
class Parser
class Ui
class ItemStorage

Command <|. RemoveCommand
Item <--- RemoveCommand
Ui <.. RemoveCommand
Inventory <.. RemoveCommand
RemoveCommand <.. Parser
ItemStorage <.. RemoveCommand
Inventory <.. ItemStorage

interface Command <<interface>> {
    +execute():void
    +isQuit():boolean
}

class RemoveCommand {
    #name:String
    #quantity:int
    #quantityRemoved:int
    #newItem:Item
    +RemoveCommand()
    #executeWithoutUi():void
    +execute():void
    +isQuit():boolean
}

class Inventory {
    {static}+get(name:String):Item
    {static}+put(name:String, item:Item):void
}

class Item {
    +Item()
    +getName():String
    +getQuantity():int
    +getPrice():double
    +getExpiryDate():LocalDate
}

class Ui {
    {static}+removeCommandSuccess():void
}

class Parser {
    {static}-parseRemoveCommand(input:String):RemoveCommand
}

class ItemStorage {
    {static}+saveData():void
}

note "Some parameters and methods \nomitted for brevity" as n1

@enduml

@startuml
hide footbox
participant "SuperTracker" as SuperTracker <<class>> #f5e3a9
participant ":RemoveCommand" as RemoveCommand #cbf7f4
participant "ItemStorage" as ItemStorage <<class>> #bcf7cf
participant "Inventory" as Inventory <<class>> #d5eac2
participant "Ui" as Ui <<class>> #e5c2ea
participant "oldItem:Item" as oldItem #ffa1a1
participant ":Item" as Item #fbffb2

SuperTracker -> RemoveCommand : execute()
activate RemoveCommand #cbf7f4

group sd execute remove command without Ui

RemoveCommand -> RemoveCommand : executeWithoutUi()
activate RemoveCommand #cbf7f4

RemoveCommand -> Inventory : get(name:String)
activate Inventory #d5eac2
Inventory -> RemoveCommand : oldItem:Item
deactivate Inventory

RemoveCommand -> oldItem : getQuantity()
activate oldItem #ffa1a1
oldItem --> RemoveCommand : :int
deactivate oldItem

RemoveCommand -> oldItem : getName()
activate oldItem #ffa1a1
oldItem --> RemoveCommand : :String
deactivate oldItem

RemoveCommand -> oldItem : getPrice()
activate oldItem #ffa1a1
oldItem --> RemoveCommand : :double
deactivate oldItem

RemoveCommand -> oldItem : getExpiry()
activate oldItem #ffa1a1
oldItem --> RemoveCommand : :LocalDate
deactivate oldItem

RemoveCommand -> Item ** : new Item(name:String, quantity:int, price:double, expiryDate:LocalDate)
activate Item #fbffb2
Item --> RemoveCommand : :Item
deactivate Item

RemoveCommand -> Inventory : put(name:String, item:Item)
activate Inventory #d5eac2
Inventory --> RemoveCommand
deactivate Inventory

RemoveCommand -> ItemStorage : saveData()
activate ItemStorage #bcf7cf
ItemStorage --> RemoveCommand
deactivate ItemStorage

RemoveCommand --> RemoveCommand
deactivate RemoveCommand

end

RemoveCommand -> Ui : removeCommandSuccess(item:Item)
activate Ui #e5c2ea
Ui --> RemoveCommand
deactivate Ui

RemoveCommand --> SuperTracker
deactivate RemoveCommand
@enduml